connected-container + disconnected-container scrollbar fixed

--- a/templates/stylesheets/homeStyles/home.css
+++ b/templates/stylesheets/homeStyles/home.css
@@ -483,7 +483,7 @@ nav .user_nav-img {
   margin-right: auto;
   margin-bottom: 5px;
   border-radius: 15px;
-  max-width: 85%;  
+  max-width: 85%;
 }
 
 .right-sidebar .connected-users img {
@@ -498,15 +498,16 @@ nav .user_nav-img {
 .connection-info {
   display: flex;
   align-items: center;
-  justify-content:space-around;
+  justify-content: space-around;
   border-radius: 14px;
   background-color: #ffffff98;
   border-bottom: 4px inset rgba(216, 201, 172, 0.856);
   color: rgba(0, 0, 0, 0.705);
-  box-shadow: 3px 5px 4px 1px rgba(175, 172, 172, 0.253),-2px -5px 4px 1px rgba(255, 254, 254, 0.178);
+  box-shadow: 3px 5px 4px 1px rgba(175, 172, 172, 0.253),
+    -2px -5px 4px 1px rgba(255, 254, 254, 0.178);
   max-width: 75%;
   margin: 0% auto;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   img {
     margin-left: -35%;
     margin-right: -25%;
@@ -553,7 +554,26 @@ nav .user_nav-img {
 #connected-container {
   height: auto;
   max-height: 35svh;
-  overflow-y: scroll;
+  overflow-y: auto;
+  margin-right: 5%;
+}
+#connected-container::-webkit-scrollbar,
+#disconnected-container::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 25px;
+}
+
+#connected-container::-webkit-scrollbar-track,
+#disconnected-container::-webkit-scrollbar-track {
+  background-color: #11111121;
+  border-radius: 25px;
+  margin-block: 15px;
+}
+
+#connected-container::-webkit-scrollbar-thumb,
+#disconnected-container::-webkit-scrollbar-thumb {
+  background-color: #1111114b;
+  border-radius: 25px;
 }
 
 #disconnected-container {
@@ -561,6 +581,8 @@ nav .user_nav-img {
   flex-direction: column;
   height: auto;
   max-height: 35svh;
+  overflow-y: auto;
+  margin-right: 5%;
 }
 
 .user-disconnected {
@@ -570,14 +592,14 @@ nav .user_nav-img {
 .isnotconnected-info {
   display: flex;
   align-items: center;
-  justify-content:space-around;
+  justify-content: space-around;
   border-radius: 14px;
   background-color: #b1acb36c;
   color: rgba(0, 0, 0, 0.425);
   box-shadow: 4px 5px 4px 1px rgba(92, 91, 91, 0.205);
   max-width: 75%;
   margin: 0% auto;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   img {
     margin-left: -35%;
     margin-right: -25%;
@@ -664,14 +686,14 @@ nav .user_nav-img {
 .right-sidebar .connection-info:hover {
   background-color: #b88e9a5b;
   border-radius: 14px;
-  border-bottom: 5px inset rgba(90, 81, 64, 0.637) ;
+  border-bottom: 5px inset rgba(90, 81, 64, 0.637);
   transform: perspective(1000px) scale(1.05) translateY(-10%) rotateX(10deg);
 }
 .right-sidebar .isnotconnected-info:hover {
   background-color: #5f5f5f5b;
   border-radius: 14px;
-  border-bottom: 5px inset rgba(90, 81, 64, 0.637) ;
-  transform:  perspective(1000px) scale(1.05) translateY(-10%) rotateX(10deg);
+  border-bottom: 5px inset rgba(90, 81, 64, 0.637);
+  transform: perspective(1000px) scale(1.05) translateY(-10%) rotateX(10deg);
 }
 
 .disconnection-element {
@@ -1114,7 +1136,7 @@ nav .user_nav-img {
   .connected-users,
   .disconnected-users {
     width: 22%;
-    padding-right:10% ;
+    padding-right: 10%;
   }
 
   .connected-users,
